[package]
name = "xlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm3-7"] }

thiserror = { version = "1.0.30", default-features = false }
log = { version = "0.4", default-features = false }

[dev-dependencies]
simple_logger = "2"
